--- a/genai_cookbook/_config.yml
+++ b/genai_cookbook/_config.yml
@@ -3,7 +3,7 @@
 
 title: Databricks Generative AI Cookbook
 author: The Databricks GenAI Community
-logo: logo.svg
+logo: logo2.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
