--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       # Build the example book
       - name: Build book
         run: |
-          jupyter-book build notebooks/
+          jupyter-book build genai_cookbook/
       # Upload the book's HTML as an artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
