--- a/genai_cookbook/_config.yml
+++ b/genai_cookbook/_config.yml
@@ -19,6 +19,7 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
+  favicon: images/index/favicon.ico
   use_issues_button: true
   use_repository_button: true
   home_page_in_navbar: false
