--- a/genai_cookbook/_toc.yml
+++ b/genai_cookbook/_toc.yml
@@ -6,4 +6,13 @@ root: index
 parts:
 - caption: All Notebooks
   chapters:
-  - glob: nbs/*
+  - file: nbs/1-introduction-to-rag
+  - file: nbs/2-fundamentals-unstructured
+    sections:
+    - file: nbs/2-fundamentals-unstructured-data-pipeline
+    - file: nbs/2-fundamentals-unstructured-rag
+    - file: nbs/2-fundamentals-unstructured-eval
+    - file: nbs/2-fundamentals-unstructured-llmops
+  - file: nbs/3-deep-dive
+  - file: nbs/4-evaluation
+  - file: nbs/5-hands-on
