--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   # Trigger the deploy on push to main branch
   push:
     branches:
-      - main
+      - dl/convert-to-rag-guide
 
 env:
   BASE_URL: /${{ github.event.repository.name }}
