--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
       pages: write
       id-token: write
     steps:
-      - uses: actions/checkout@v3
-
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: dl/convert-to-rag-guide
       # Install dependencies
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
